添加 admin api
