# api-auth-server/src/main/java/com/example/api_auth_server/model/ClientSecretUpdateRequest.java
@@ -1,0 +1,13 @@
+package com.example.api_auth_server.model;
+
+public class ClientSecretUpdateRequest {
+    private String clientSecret;
+
+    public String getClientSecret() {
+        return clientSecret;
+    }
+
+    public void setClientSecret(String clientSecret) {
+        this.clientSecret = clientSecret;
+    }
+} 
