# api-auth-server/src/main/java/com/example/api_auth_server/model/ClientUpdateRequest.java
@@ -1,0 +1,53 @@
+package com.example.api_auth_server.model;
+
+import java.util.List;
+import java.util.Map;
+
+public class ClientUpdateRequest {
+    private List<String> scope;
+    private List<String> grantTypes;
+    private Integer expiresIn;
+    private Map<String, Object> additionalInformation;
+    private List<String> resourceIds;
+
+    // Getters and Setters
+    public List<String> getScope() {
+        return scope;
+    }
+
+    public void setScope(List<String> scope) {
+        this.scope = scope;
+    }
+
+    public List<String> getGrantTypes() {
+        return grantTypes;
+    }
+
+    public void setGrantTypes(List<String> grantTypes) {
+        this.grantTypes = grantTypes;
+    }
+
+    public Integer getExpiresIn() {
+        return expiresIn;
+    }
+
+    public void setExpiresIn(Integer expiresIn) {
+        this.expiresIn = expiresIn;
+    }
+
+    public Map<String, Object> getAdditionalInformation() {
+        return additionalInformation;
+    }
+
+    public void setAdditionalInformation(Map<String, Object> additionalInformation) {
+        this.additionalInformation = additionalInformation;
+    }
+
+    public List<String> getResourceIds() {
+        return resourceIds;
+    }
+
+    public void setResourceIds(List<String> resourceIds) {
+        this.resourceIds = resourceIds;
+    }
+} 
