# api-auth-server/src/main/java/com/example/api_auth_server/model/TokenInfo.java
@@ -1,0 +1,52 @@
+package com.example.api_auth_server.model;
+
+import java.time.Instant;
+import java.util.List;
+
+public class TokenInfo {
+    private String tokenId;
+    private String clientId;
+    private List<String> scope;
+    private Instant expiresAt;
+    private Instant createdAt;
+
+    public String getTokenId() {
+        return tokenId;
+    }
+
+    public void setTokenId(String tokenId) {
+        this.tokenId = tokenId;
+    }
+
+    public String getClientId() {
+        return clientId;
+    }
+
+    public void setClientId(String clientId) {
+        this.clientId = clientId;
+    }
+
+    public List<String> getScope() {
+        return scope;
+    }
+
+    public void setScope(List<String> scope) {
+        this.scope = scope;
+    }
+
+    public Instant getExpiresAt() {
+        return expiresAt;
+    }
+
+    public void setExpiresAt(Instant expiresAt) {
+        this.expiresAt = expiresAt;
+    }
+
+    public Instant getCreatedAt() {
+        return createdAt;
+    }
+
+    public void setCreatedAt(Instant createdAt) {
+        this.createdAt = createdAt;
+    }
+} 
